syntax = "proto3";

package vcassist.services.powerservice.v1;

import "vcassist/scrapers/powerschool/v1/query_all_students.proto";
import "vcassist/scrapers/powerschool/v1/query_schedule.proto";
import "vcassist/scrapers/powerschool/v1/query_student_data.proto";
import "vcassist/scrapers/powerschool/v1/query_student_photo.proto";
import "vcassist/services/studentdata/v1/api.proto";

// GetAuthStatus
message GetAuthStatusRequest {
  string student_id = 1;
}
message GetAuthStatusResponse {
  bool is_authenticated = 1;
}

// GetOAuthFlow
message GetOAuthFlowRequest {}
message GetOAuthFlowResponse {
  vcassist.services.studentdata.v1.OAuthFlow flow = 1;
}

// ProvideOAuth
message ProvideOAuthRequest {
  string student_id = 1;
  string token = 2;
}
message ProvideOAuthResponse {}

// GetStudentData
message GetStudentDataRequest {
  string student_id = 1;
}
message GetStudentDataResponse {
  vcassist.scrapers.powerschool.v1.StudentProfile profile = 1;
  vcassist.scrapers.powerschool.v1.CourseMeetingList meetings = 2;
  repeated vcassist.scrapers.powerschool.v1.CourseData course_data = 3;
  vcassist.scrapers.powerschool.v1.StudentPhoto photo = 4;
}

service PowerschoolService {
  rpc GetAuthStatus(GetAuthStatusRequest) returns (GetAuthStatusResponse);
  rpc GetOAuthFlow(GetOAuthFlowRequest) returns (GetOAuthFlowResponse);
  rpc ProvideOAuth(ProvideOAuthRequest) returns (ProvideOAuthResponse);

  rpc GetStudentData(GetStudentDataRequest) returns (GetStudentDataResponse);
}
